Set up Python 3.11 for `macos-12` too

--- a/.github/workflows/__build-mode-autobuild.yml
+++ b/.github/workflows/__build-mode-autobuild.yml
@@ -29,7 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Build mode autobuild
     permissions:
       contents: read
@@ -40,7 +40,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
