--- a/.github/workflows/__build-mode-none.yml
+++ b/.github/workflows/__build-mode-none.yml
@@ -31,7 +31,7 @@ jobs:
             version: latest
           - os: ubuntu-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Build mode none
     permissions:
       contents: read
@@ -42,7 +42,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
