--- a/.github/workflows/__diagnostics-export.yml
+++ b/.github/workflows/__diagnostics-export.yml
@@ -45,7 +45,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Diagnostic export
     permissions:
       contents: read
@@ -56,7 +56,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
