--- a/.github/workflows/__go-custom-queries.yml
+++ b/.github/workflows/__go-custom-queries.yml
@@ -75,7 +75,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: 'Go: Custom queries'
     permissions:
       contents: read
@@ -86,7 +86,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
