--- a/.github/workflows/__go-indirect-tracing-workaround-no-file-program.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround-no-file-program.yml
@@ -29,7 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: stable-v2.14.6
-    fail-fast: false
+      fail-fast: false
     name: 'Go: diagnostic when `file` is not installed'
     permissions:
       contents: read
@@ -40,7 +40,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
