--- a/.github/workflows/__javascript-source-root.yml
+++ b/.github/workflows/__javascript-source-root.yml
@@ -33,7 +33,7 @@ jobs:
             version: default
           - os: ubuntu-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Custom source root
     permissions:
       contents: read
@@ -44,7 +44,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
