--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -51,7 +51,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Resolve environment
     permissions:
       contents: read
@@ -62,7 +62,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
