--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -43,7 +43,7 @@ jobs:
             version: latest
           - os: ubuntu-latest
             version: nightly-latest
-    fail-fast: false
+      fail-fast: false
     name: Test unsetting environment variables
     permissions:
       contents: read
@@ -54,7 +54,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
