--- a/.github/workflows/__upload-ref-sha-input.yml
+++ b/.github/workflows/__upload-ref-sha-input.yml
@@ -33,7 +33,7 @@ jobs:
             version: default
           - os: windows-latest
             version: default
-    fail-fast: false
+      fail-fast: false
     name: "Upload-sarif: 'ref' and 'sha' from inputs"
     permissions:
       contents: read
@@ -44,7 +44,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
