--- a/.github/workflows/__with-checkout-path.yml
+++ b/.github/workflows/__with-checkout-path.yml
@@ -33,7 +33,7 @@ jobs:
             version: latest
           - os: windows-latest
             version: latest
-    fail-fast: false
+      fail-fast: false
     name: Use a custom `checkout_path`
     permissions:
       contents: read
@@ -44,7 +44,9 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          matrix.os == 'macos-latest' && (
+          (matrix.os == 'macos-latest' || 
+
+          matrix.os == 'macos-12) && (
 
           matrix.version == 'stable-20230403' ||
 
