--- a/.github/workflows/__autobuild-direct-tracing.yml
+++ b/.github/workflows/__autobuild-direct-tracing.yml
@@ -47,7 +47,7 @@ jobs:
         if: >-
           (matrix.os == 'macos-latest' || 
 
-          matrix.os == 'macos-12) && (
+          matrix.os == 'macos-12') && (
 
           matrix.version == 'stable-20230403' ||
 
