--- a/.github/workflows/__cpp-deptrace-enabled.yml
+++ b/.github/workflows/__cpp-deptrace-enabled.yml
@@ -45,7 +45,7 @@ jobs:
         if: >-
           (matrix.os == 'macos-latest' || 
 
-          matrix.os == 'macos-12) && (
+          matrix.os == 'macos-12') && (
 
           matrix.version == 'stable-20230403' ||
 
