--- a/.github/workflows/__test-local-codeql.yml
+++ b/.github/workflows/__test-local-codeql.yml
@@ -41,7 +41,7 @@ jobs:
         if: >-
           (matrix.os == 'macos-latest' || 
 
-          matrix.os == 'macos-12) && (
+          matrix.os == 'macos-12') && (
 
           matrix.version == 'stable-20230403' ||
 
