--- a/pr-checks/checks/go-custom-queries.yml
+++ b/pr-checks/checks/go-custom-queries.yml
@@ -3,6 +3,9 @@ description: "Checks that Go works in conjunction with a config file specifying 
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
+  - uses: actions/setup-go@v5
+    with:
+      go-version: ">=1.21.0"
   - uses: ./../action/init
     with:
       languages: go
