--- a/pr-checks/checks/multi-language-autodetect.yml
+++ b/pr-checks/checks/multi-language-autodetect.yml
@@ -2,6 +2,10 @@ name: "Multi-language repository"
 description: "An end-to-end integration test of a multi-language repository using automatic language detection"
 operatingSystems: ["ubuntu", "macos"]
 steps:
+  - uses: actions/setup-go@v5
+    with:
+      go-version: ">=1.21.0"
+
   - uses: ./../action/init
     id: init
     with:
