--- a/pr-checks/checks/scaling-reserved-ram.yml
+++ b/pr-checks/checks/scaling-reserved-ram.yml
@@ -4,6 +4,10 @@ operatingSystems: ["ubuntu", "macos"]
 env:
   CODEQL_ACTION_SCALING_RESERVED_RAM: true
 steps:
+  - uses: actions/setup-go@v5
+    with:
+      go-version: ">=1.21.0"
+
   - uses: ./../action/init
     id: init
     with:
