--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -61,9 +61,7 @@ jobs:
       - name: Setup Python on MacOS
         uses: actions/setup-python@v5
         if: >-
-          (matrix.os == 'macos-latest' || 
-
-          matrix.os == 'macos-12') && (
+          runner.os == 'macOS' && (
 
           matrix.version == 'stable-20230403' ||
 
