Disable fail fast in generated workflows

--- a/.github/workflows/__analyze-ref-input.yml
+++ b/.github/workflows/__analyze-ref-input.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   analyze-ref-input:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
