--- a/.github/workflows/__build-mode-autobuild.yml
+++ b/.github/workflows/__build-mode-autobuild.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   build-mode-autobuild:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
