--- a/.github/workflows/__javascript-source-root.yml
+++ b/.github/workflows/__javascript-source-root.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   javascript-source-root:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
