--- a/.github/workflows/__language-aliases.yml
+++ b/.github/workflows/__language-aliases.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   language-aliases:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
