--- a/.github/workflows/__packaging-config-js.yml
+++ b/.github/workflows/__packaging-config-js.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   packaging-config-js:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
