--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   unset-environment:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
