--- a/.github/workflows/__all-platform-bundle.yml
+++ b/.github/workflows/__all-platform-bundle.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   all-platform-bundle:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
