--- a/.github/workflows/__autobuild-direct-tracing.yml
+++ b/.github/workflows/__autobuild-direct-tracing.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   autobuild-direct-tracing:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
