--- a/.github/workflows/__build-mode-rollback.yml
+++ b/.github/workflows/__build-mode-rollback.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   build-mode-rollback:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
