--- a/.github/workflows/__cpp-deptrace-enabled.yml
+++ b/.github/workflows/__cpp-deptrace-enabled.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   cpp-deptrace-enabled:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
