--- a/.github/workflows/__diagnostics-export.yml
+++ b/.github/workflows/__diagnostics-export.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   diagnostics-export:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
