--- a/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   go-indirect-tracing-workaround-diagnostic:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
