--- a/.github/workflows/__go-indirect-tracing-workaround.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   go-indirect-tracing-workaround:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
