--- a/.github/workflows/__go-tracing-legacy-workflow.yml
+++ b/.github/workflows/__go-tracing-legacy-workflow.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   go-tracing-legacy-workflow:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
