--- a/.github/workflows/__remote-config.yml
+++ b/.github/workflows/__remote-config.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   remote-config:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
