--- a/.github/workflows/__split-workflow.yml
+++ b/.github/workflows/__split-workflow.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   split-workflow:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
