--- a/.github/workflows/__swift-custom-build.yml
+++ b/.github/workflows/__swift-custom-build.yml
@@ -25,6 +25,7 @@ on:
 jobs:
   swift-custom-build:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
