--- a/.github/workflows/test-codeql-bundle-all.yml
+++ b/.github/workflows/test-codeql-bundle-all.yml
@@ -22,6 +22,7 @@ on:
 jobs:
   test-codeql-bundle-all:
     strategy:
+      fail-fast: false
       matrix:
         include:
         - os: ubuntu-latest
