--- a/init/action.yml
+++ b/init/action.yml
@@ -4,14 +4,14 @@ author: 'GitHub'
 inputs:
   tools:
     description: >-
-      The version of the CodeQL tools to use. This can be any of the following:
-      
-      - A local path to a tarball containing the CodeQL tools, or
-      - A URL to a GitHub release assets containing the CodeQL tools, or
-      - A special value `linked` which is forcing the use of the CodeQL tools
-        that the action has been bundled with.
+      By default, the Action will use the recommended version of the CodeQL
+      Bundle to analyze your project. You can override this choice using this
+      input. One of:
 
-      If not specified, the Action will check in several places until it finds the CodeQL tools.
+      - A local path to a CodeQL Bundle tarball, or
+      - The URL of a CodeQL Bundle tarball GitHub release asset, or
+      - A special value `linked` which uses the version of the CodeQL tools
+        that the Action has been bundled with.
     required: false
   languages:
     description: >-
