--- a/.github/actions/check-codescanning-config/action.yml
+++ b/.github/actions/check-codescanning-config/action.yml
@@ -29,7 +29,8 @@ inputs:
   tools:
     required: true
     description: |
-      The version of the CodeQL tools to use. This can be any of the following:
+      The version of CodeQL passed to the `tools` input of the init action.
+      This can be any of the following:
 
       - A local path to a tarball containing the CodeQL tools, or
       - A URL to a GitHub release assets containing the CodeQL tools, or
