Use older ubuntu version

--- a/.github/workflows/__autobuild-direct-tracing.yml
+++ b/.github/workflows/__autobuild-direct-tracing.yml
@@ -28,11 +28,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: latest
           - os: windows-latest
             version: latest
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
