--- a/.github/workflows/__config-export.yml
+++ b/.github/workflows/__config-export.yml
@@ -28,13 +28,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: latest
           - os: macos-latest
             version: latest
           - os: windows-latest
             version: latest
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
