--- a/.github/workflows/__remote-config.yml
+++ b/.github/workflows/__remote-config.yml
@@ -28,49 +28,49 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-20230403
           - os: macos-12
             version: stable-20230403
           - os: windows-latest
             version: stable-20230403
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-v2.13.5
           - os: macos-12
             version: stable-v2.13.5
           - os: windows-latest
             version: stable-v2.13.5
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-v2.14.6
           - os: macos-12
             version: stable-v2.14.6
           - os: windows-latest
             version: stable-v2.14.6
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-v2.15.5
           - os: macos-latest
             version: stable-v2.15.5
           - os: windows-latest
             version: stable-v2.15.5
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-v2.16.6
           - os: macos-latest
             version: stable-v2.16.6
           - os: windows-latest
             version: stable-v2.16.6
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: default
           - os: macos-latest
             version: default
           - os: windows-latest
             version: default
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: latest
           - os: macos-latest
             version: latest
           - os: windows-latest
             version: latest
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
