--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -28,25 +28,25 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: stable-v2.13.4
           - os: macos-12
             version: stable-v2.13.4
           - os: windows-latest
             version: stable-v2.13.4
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: default
           - os: macos-latest
             version: default
           - os: windows-latest
             version: default
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: latest
           - os: macos-latest
             version: latest
           - os: windows-latest
             version: latest
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
