Upload SARIF with ref/sha inputs: Generate SARIF with analyze Action

--- a/pr-checks/checks/upload-ref-sha-input.yml
+++ b/pr-checks/checks/upload-ref-sha-input.yml
@@ -10,6 +10,12 @@ steps:
   - name: Build code
     shell: bash
     run: ./build.sh
+  # Generate some SARIF we can upload with the upload-sarif step
+  - uses: ./../action/analyze
+    with:
+      ref: 'refs/heads/main'
+      sha: '5e235361806c361d4d3f8859e3c897658025a9a2'
+      upload: never
   - uses: ./../action/upload-sarif
     with:
       ref: 'refs/heads/main'
