--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,17 +44,15 @@
         "no-console": "off",
         "no-sequences": "error",
         "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/no-shadow": "error",
         "one-var": ["error", "never"]
     },
     "overrides": [{
         // "temporarily downgraded during transition to eslint
         "files": "**",
         "rules": {
-            "@typescript-eslint/explicit-module-boundary-types": "off",
             "@typescript-eslint/no-explicit-any": "off",
             "@typescript-eslint/no-unsafe-assignment": "off",
-            "@typescript-eslint/no-unsafe-call": "off",
             "@typescript-eslint/no-unsafe-member-access": "off",
             "@typescript-eslint/no-unsafe-return": "off",
             "@typescript-eslint/no-var-requires": "off",
