Ensure string argument instead of boolean

--- a/.github/workflows/__all-platform-bundle.yml
+++ b/.github/workflows/__all-platform-bundle.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'true'
-          setup-kotlin: true
+          setup-kotlin: 'true'
       - id: init
         uses: ./../action/init
         with:
