--- a/.github/workflows/__config-export.yml
+++ b/.github/workflows/__config-export.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'false'
-          setup-kotlin: true
+          setup-kotlin: 'true'
       - uses: ./../action/init
         with:
           languages: javascript
