Add build mode to Swift autobuild check

--- a/.github/workflows/__swift-autobuild.yml
+++ b/.github/workflows/__swift-autobuild.yml
@@ -61,6 +61,7 @@ jobs:
         id: init
         with:
           languages: swift
+          build-mode: autobuild
           tools: ${{ steps.prepare-test.outputs.tools-url }}
       - uses: ./../action/.github/actions/setup-swift
         with:
@@ -83,5 +84,4 @@ jobs:
             exit 1
           fi
     env:
-      CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT: 'true' # Remove when Swift is GA.
       CODEQL_ACTION_TEST_MODE: true
