Migrate to `eslint.config.mjs`
`.eslintrc.json` is deprecated.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
   ],
   "devDependencies": {
     "@ava/typescript": "4.1.0",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
     "@types/adm-zip": "^0.5.5",
     "@types/console-log-level": "^1.4.5",
     "@types/get-folder-size": "^2.0.0",
