--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -28,6 +28,16 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
+            version: stable-20230403
+          - os: ubuntu-latest
+            version: stable-v2.13.5
+          - os: ubuntu-latest
+            version: stable-v2.14.6
+          - os: ubuntu-latest
+            version: stable-v2.15.5
+          - os: ubuntu-latest
+            version: stable-v2.16.6
+          - os: ubuntu-latest
             version: default
           - os: ubuntu-latest
             version: linked
@@ -66,9 +76,6 @@ jobs:
         with:
           db-location: ${{ runner.temp }}/customDbLocation
           tools: ${{ steps.prepare-test.outputs.tools-url }}
-      - uses: ./../action/.github/actions/setup-swift
-        with:
-          codeql-path: ${{ steps.init.outputs.codeql-path }}
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.21.0'
