--- a/.github/workflows/__test-local-codeql.yml
+++ b/.github/workflows/__test-local-codeql.yml
@@ -66,6 +66,7 @@ jobs:
       - id: init
         uses: ./../action/init
         with:
+          languages: cpp,csharp,go,java,javascript,python,ruby
           tools: ./codeql-bundle-linux64.tar.gz
       - name: Build code
         shell: bash
