--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -75,6 +75,8 @@ jobs:
         id: init
         with:
           db-location: ${{ runner.temp }}/customDbLocation
+      # We manually exclude Swift from the languages list here, as it is not supported on Ubuntu
+          languages: cpp,csharp,go,java,javascript,python,ruby
           tools: ${{ steps.prepare-test.outputs.tools-url }}
       - uses: actions/setup-go@v5
         with:
