--- a/pr-checks/checks/multi-language-autodetect.yml
+++ b/pr-checks/checks/multi-language-autodetect.yml
@@ -1,5 +1,5 @@
 name: "Multi-language repository"
-description: "An end-to-end integration test of a multi-language repository using automatic language detection"
+description: "An end-to-end integration test of a multi-language repository using automatic language detection for MacOS"
 operatingSystems: ["macos", "ubuntu"]
 steps:
   - uses: actions/setup-go@v5
@@ -7,7 +7,16 @@ steps:
       go-version: ">=1.21.0"
 
   - uses: ./../action/init
-    id: init
+    if: runner.os == 'Linux'
+    with:
+      db-location: "${{ runner.temp }}/customDbLocation"
+      # We manually exclude Swift from the languages list here, as it is not supported on Ubuntu
+      languages: cpp,csharp,go,java,javascript,python,ruby 
+      tools: ${{ steps.prepare-test.outputs.tools-url }}
+
+  - uses: ./../action/init
+    id: init-macos
+    if: runner.os == 'macOS'
     with:
       db-location: "${{ runner.temp }}/customDbLocation"
       tools: ${{ steps.prepare-test.outputs.tools-url }}
@@ -15,7 +24,7 @@ steps:
   - uses: ./../action/.github/actions/setup-swift
     if: runner.os == 'macOS'
     with:
-      codeql-path: ${{ steps.init.outputs.codeql-path }}
+      codeql-path: ${{ steps.init-macos.outputs.codeql-path }}
 
   - name: Build code
     shell: bash
@@ -66,7 +75,7 @@ steps:
       fi
 
   - name: Check language autodetect for Swift on MacOS
-    if: runner.os == 'macOS'
+    if: runner.os == 'macOS' && matrix.version != 'stable-20230403'
     shell: bash
     run: |
       SWIFT_DB=${{ fromJson(steps.analysis.outputs.db-locations).swift }}
