--- a/pr-checks/checks/test-local-codeql.yml
+++ b/pr-checks/checks/test-local-codeql.yml
@@ -12,6 +12,7 @@ steps:
   - id: init
     uses: ./../action/init
     with:
+      languages: cpp,csharp,go,java,javascript,python,ruby
       tools: ./codeql-bundle-linux64.tar.gz
   - name: Build code
     shell: bash
