--- a/pr-checks/checks/unset-environment.yml
+++ b/pr-checks/checks/unset-environment.yml
@@ -7,7 +7,7 @@ steps:
     id: init
     with:
       db-location: ${{ runner.temp }}/customDbLocation
-      # We manually exclude Swift from the languages list here, as it is not supported on Ubuntu
+      # Swift is not supported on Ubuntu so we manually exclude it from the list here
       languages: cpp,csharp,go,java,javascript,python,ruby 
       tools: ${{ steps.prepare-test.outputs.tools-url }}
   - uses: actions/setup-go@v5
