--- a/pr-checks/checks/unset-environment.yml
+++ b/pr-checks/checks/unset-environment.yml
@@ -1,24 +1,15 @@
 name: "Test unsetting environment variables"
 description: "An end-to-end integration test that unsets some environment variables"
 operatingSystems: ["ubuntu"]
-excludeOsAndVersionCombination: [ 
-  # Known failure for Swift on Linux before CLI v2.17.4.
-  [ "ubuntu", "stable-20230403" ], 
-  [ "ubuntu", "stable-v2.13.5" ], 
-  [ "ubuntu", "stable-v2.14.6" ], 
-  [ "ubuntu", "stable-v2.15.5" ],
-  [ "ubuntu", "stable-v2.16.6" ],
-]
 
 steps:
   - uses: ./../action/init
     id: init
     with:
       db-location: ${{ runner.temp }}/customDbLocation
+      # Swift is not supported on Ubuntu so we manually exclude it from the list here
+      languages: cpp,csharp,go,java,javascript,python,ruby 
       tools: ${{ steps.prepare-test.outputs.tools-url }}
-  - uses: ./../action/.github/actions/setup-swift
-    with:
-      codeql-path: ${{ steps.init.outputs.codeql-path }}
   - uses: actions/setup-go@v5
     with:
       go-version: '>=1.21.0'
