--- a/pr-checks/checks/diagnostics-export.yml
+++ b/pr-checks/checks/diagnostics-export.yml
@@ -1,8 +1,6 @@
 name: "Diagnostic export"
 description: "Tests that manually added diagnostics are correctly exported to SARIF."
-# Test on 2.12.6 (which requires a workaround in the Action), the latest release, and the latest
-# nightly.
-versions: ["stable-20230403", "linked", "nightly-latest"]
+versions: ["linked", "nightly-latest"]
 env:
   CODEQL_ACTION_EXPORT_DIAGNOSTICS: true
 steps:
@@ -16,17 +14,13 @@ steps:
     env:
       CODEQL_PATH: ${{ steps.init.outputs.codeql-path }}
     run: |
-      for i in {1..2}; do
-        # Use the same location twice to test the workaround for the bug in CodeQL CLI 2.12.6 that
-        # produces an invalid diagnostic with multiple identical location objects.
-        "$CODEQL_PATH" database add-diagnostic \
-          "$RUNNER_TEMP/codeql_databases/javascript" \
-          --file-path /path/to/file \
-          --plaintext-message "Plaintext message $i" \
-          --source-id "lang/diagnostics/example" \
-          --source-name "Diagnostic name" \
-          --ready-for-status-page
-      done
+      "$CODEQL_PATH" database add-diagnostic \
+        "$RUNNER_TEMP/codeql_databases/javascript" \
+        --file-path /path/to/file \
+        --plaintext-message "Plaintext message" \
+        --source-id "lang/diagnostics/example" \
+        --source-name "Diagnostic name" \
+        --ready-for-status-page
   - uses: ./../action/analyze
     with:
       output: "${{ runner.temp }}/results"
@@ -46,7 +40,7 @@ steps:
         const fs = require('fs');
 
         function checkStatusPageNotification(n) {
-          const expectedMessage = 'Plaintext message 1\n\nCodeQL also found 1 other diagnostic like this. See the workflow log for details.';
+          const expectedMessage = 'Plaintext message';
           if (n.message.text !== expectedMessage) {
             core.setFailed(`Expected the status page diagnostic to have the message '${expectedMessage}', but found '${n.message.text}'.`);
           }
