--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -28,10 +28,6 @@ jobs:
       matrix:
         include:
           - os: macos-12
-            version: stable-20230403
-          - os: ubuntu-latest
-            version: stable-20230403
-          - os: macos-12
             version: stable-v2.13.5
           - os: ubuntu-latest
             version: stable-v2.13.5
@@ -70,8 +66,6 @@ jobs:
         uses: actions/setup-python@v5
         if: >-
           runner.os == 'macOS' && (
-
-          matrix.version == 'stable-20230403' ||
 
           matrix.version == 'stable-v2.13.5' ||
 
@@ -154,7 +148,7 @@ jobs:
           fi
 
       - name: Check language autodetect for Swift on MacOS
-        if: runner.os == 'macOS' && matrix.version != 'stable-20230403'
+        if: runner.os == 'macOS'
         shell: bash
         run: |
           SWIFT_DB=${{ fromJson(steps.analysis.outputs.db-locations).swift }}
