--- a/.github/workflows/__go-tracing-custom-build-steps.yml
+++ b/.github/workflows/__go-tracing-custom-build-steps.yml
@@ -44,6 +44,10 @@ jobs:
           - os: macos-latest
             version: stable-v2.16.6
           - os: ubuntu-latest
+            version: stable-v2.17.6
+          - os: macos-latest
+            version: stable-v2.17.6
+          - os: ubuntu-latest
             version: default
           - os: macos-latest
             version: default
