--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -36,6 +36,8 @@ jobs:
           - os: ubuntu-latest
             version: stable-v2.16.6
           - os: ubuntu-latest
+            version: stable-v2.17.6
+          - os: ubuntu-latest
             version: default
           - os: ubuntu-latest
             version: linked
