Fix matrixing of "submit SARIF after failure" check

--- a/pr-checks/checks/submit-sarif-failure.yml
+++ b/pr-checks/checks/submit-sarif-failure.yml
@@ -19,6 +19,7 @@ steps:
   - uses: ./init
     with:
       languages: javascript
+      tools: ${{ steps.prepare-test.outputs.tools-url }}
   - name: Fail
     # We want this job to pass if the Action correctly uploads the SARIF file for
     # the failed run.
