--- a/pr-checks/checks/test-local-codeql.yml
+++ b/pr-checks/checks/test-local-codeql.yml
@@ -14,7 +14,7 @@ steps:
     with:
       # Swift is not supported on Ubuntu so we manually exclude it from the list here
       languages: cpp,csharp,go,java,javascript,python,ruby
-      tools: ./codeql-bundle-linux64.tar.zst
+      tools: ./codeql-bundle-linux64.tar.gz
   - name: Build code
     shell: bash
     run: ./build.sh
